<resources>
    <string name="app_name">Material3Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="material3">Material3</string>
    <string name="login_button">Log-in</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="register_button">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>